methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:2: error: Missing closing brace `}' assumed here
def move(nbPas: Int,versLAvant: Boolean) {if (versLAvant) {while (nbPas!=0) {avance(); nbPas = nbPas - 1}} 
^MethodsArgs:2: error: expected class or object definition
def move(nbPas: Int,versLAvant: Boolean) {if (versLAvant) {while (nbPas!=0) {avance(); nbPas = nbPas - 1}} 
^